[feature] add mutliThread in DiffFile Level ; refactor: rename TrainningSample tp TrainingSample

--- a/src/main/java/com/github/smartcommit/intent/pythonIntent/multi-class-classifierMongo.ipynb
+++ b/src/main/java/com/github/smartcommit/intent/pythonIntent/multi-class-classifierMongo.ipynb
@@ -41,7 +41,7 @@
     "# 连接并获得CommitMsg数据库和Collection\n",
     "myclient = pymongo.MongoClient('localhost', 27017)\n",
     "mydb = myclient[\"commitsDB\"]\n",
-    "mycol = mydb[\"commitTrainningSample\"]\n"
+    "mycol = mydb[\"commitTrainingSample\"]\n"
    ]
   },
   {
